--- a/FarmAnalysis/ProductivityAnalysis.csproj
+++ b/FarmAnalysis/ProductivityAnalysis.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>analiz_fermy</RootNamespace>
+    <RootNamespace>FarmAnalysis</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
